# RealtyScope

./: .dockerignore  .env.example  .env.production.example  .gitignore  README.md  alembic.ini  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  Описание проекта.html
.github/workflows/: ci.yml
alembic/: env.py
docs/: demo-script.md  demo-script.vi.md  phase9-evidence-20260620.md  project-status.md
notebooks/: phase3_eda_skeleton.ipynb  phase4_eda_observations.ipynb
scripts/: run_domclick_scheduled_batch.ps1
tests/: test_alembic_config.py  test_api_data_routes.py  test_api_health.py  test_api_monitoring.py  test_api_prediction_contract.py  test_ci_workflow_contract.py  test_config.py  test_data_readiness.py  test_database_models.py  test_database_persistence.py  test_district_boundaries.py  test_docker_build_contract.py  test_domclick_chrome_capture.py  test_domclick_live.py  test_domclick_parser.py  test_domclick_scheduled_batch.py  test_domclick_snapshot_collector.py  test_eda_summary.py  test_ingestion_contracts.py  test_ingestion_pipeline.py  test_lifecycle_verification.py  test_ml_features.py  test_ml_model_compare.py  test_ml_model_selection.py  test_ml_promotion_cli.py  test_ml_training.py  test_osm_enrichment.py  test_package_import.py  test_phase3_eda_notebook.py  test_phase4_eda_notebook.py  test_real_data_ingestion.py  test_sample_ingestion.py  test_static_audit_requirements.py  test_streamlit_api_client.py  test_streamlit_dashboard_charts.py  test_streamlit_scaffold.py  test_streamlit_ui_payload.py  test_teammate_import.py
(+104 files in other folders)
