[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "realtyscope"
version = "0.1.0"
description = "RealtyScope grade-5 data service for Moscow apartment sale-price prediction"
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.7",
  "pydantic-settings>=2.2",
]

[project.optional-dependencies]
api = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.29",
  "redis>=5.0",
]
streamlit = [
  "streamlit>=1.35",
  "requests>=2.31",
]
data = [
  "sqlalchemy>=2.0",
  "psycopg[binary]>=3.1",
  "alembic>=1.13",
  "pandas>=2.2",
]
ml = [
  "scikit-learn>=1.4",
  "mlflow>=2.12,<3",
  "joblib>=1.4",
]
dev = [
  "httpx>=0.27",
  "pytest>=8.2",
  "pytest-cov>=5.0",
  "ruff>=0.4",
  "pre-commit>=3.7",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = [".", "src"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "services", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
